[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "immrax"
version = "0.2.0"
dependencies = [
    "numpy < 2",
    "scipy ~= 1.14.1",
    "shapely ~= 2.0.6",
    "matplotlib ~= 3.9.2",
    "pypoman ~= 1.1.0",
    "tabulate ~= 0.9.0",
    "sympy ~= 1.13.2",
    "sympy2jax ~= 0.0.5",
    "jax == 0.4.38",
    "jaxtyping ~= 0.2.33",
    "diffrax == 0.6.1",
    "equinox ~= 0.11.5",
    "immutabledict ~= 4.2.0",
    "jax_verify@git+https://github.com/Akash-Harapanahalli/jax_verify.git",
    "linrax"
]

[project.optional-dependencies]
cuda = [
	"jax[cuda12_pip] == 0.4.38",
	"linrax[cuda]",
]

examples = [
	"casadi ~= 3.6.7",
	"control ~= 0.10.1",
	# "cyipopt ~= 1.5.0", # This is a pain to install manually, better to do with conda
    "ipykernel ~= 6.29.5",
    "ipympl ~= 0.9.7"
]
