[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]

exclude = [
	"immrax/_vendor/**"
]

[tool.ruff.lint]

ignore = ["E731"] # We like lambda functions

[project]
name = "immrax"
version = "0.3.1"
readme = {file = "README.md", content-type = "text/markdown"}

dependencies = [
    "numpy ~= 2.3.2",
    "scipy ~= 1.16.1",
    "shapely ~= 2.0.6",
    "matplotlib ~= 3.9.2",
    "pypoman ~= 1.1.0",
    "tabulate ~= 0.9.0",
    "jax ~= 0.6.1",
    "jaxtyping ~= 0.2.33",
    "diffrax ~= 0.7.0",
    "equinox ~= 0.12.2",
    "immutabledict ~= 4.2.0",
    "linrax"
]

[project.urls]
"Homepage" = "https://github.com/gtfactslab/immrax"
"Bug Tracker" = "https://github.com/gtfactslab/immrax/issues"
"Source Code" = "https://github.com/gtfactslab/immrax"

[project.optional-dependencies]
cuda = [
    "jax[cuda12] ~= 0.6.1",
    "linrax[cuda]",
]

examples = [
    "casadi ~= 3.6.7",
    "control ~= 0.10.1",
    # "cyipopt ~= 1.5.0", # This is a pain to install manually, better to do with conda
    "ipykernel ~= 6.29.5",
    "ipympl ~= 0.9.7"
]
